--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -1,7 +1,7 @@
 // Variables
 
 @baseFontFamily: "Merriweather", "Open Sans", "Helvetica Neue", Helvetica, Arial, "Nimbus L", sans-serif;
-@baseFontColor: #7f8c8d;
+@baseFontColor: #3E3E3E;
 @headerFontFamily: "Roboto Slab", @baseFontFamily;
 @headerFontColor: #151515;
 @headerLinkColor: @headerFontColor;
