Added code style

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -65,9 +65,17 @@ pre {
   background-color: rgba(0, 0, 0, 0.05);
 }
 p code {
-  font-family: "Consolas", Courier, monospace;
   font-size: .8em;
   line-height: 1.2em;
+  font-family: "Consolas", Courier, monospace;
+  padding: 0,5em;
+  white-space: pre;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+  background-color: rgba(0, 0, 0, 0.05);
 }
 h1 {
   color: #151515;
