--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -87,6 +87,15 @@ p code {
     font-family: @preFontFamily;
     font-size: .8em;
     line-height: 1.2em;
+    font-family: @preFontFamily;
+    padding: 0,5em;
+    white-space: pre;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+    background-color: rgba(0, 0, 0, 0.05);
 }
 
 h1 {
