--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -14,7 +14,7 @@
 @postmetaColor: #95a5a6;
 @gistBackgroundColor: #fdfdfd;
 
-@maxPageWidth: 800px;
+@maxPageWidth: 900px;
 
 // Styles
 
@@ -153,8 +153,14 @@ h2.blog-description {
     margin-bottom: 3em;
     padding: .5em 1em;
     line-height: 1.2em;
+    font-family: @secondaryFontFamily;
+    text-transform: uppercase;
+    font-size: 1.6em;
+    color: @postmetaColor;
 }
-
+h1.post-title{
+    font-size: 2em;
+}
 header.article-header, header.page-header {
     margin-bottom: 3em
 }
@@ -256,7 +262,8 @@ h1.post-title a:focus, h1.post-title a:hover, h1.blog-title a:focus, h1.blog-tit
 h2 {
     font-family: @headerFontFamily;
     margin-top: 2em;
-    font-weight: 300;
+    font-size: 2.5em;
+    font-weight: 400;
     color: @headerFontColor;
 }
 
