--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -159,7 +159,7 @@ h2.blog-description {
     color: @postmetaColor;
 }
 h1.post-title{
-    font-size: 2em;
+    font-size: 3em;
 }
 header.article-header, header.page-header {
     margin-bottom: 3em
@@ -259,10 +259,10 @@ h1.post-title a:focus, h1.post-title a:hover, h1.blog-title a:focus, h1.blog-tit
     text-decoration: none;
 }
 
-h2 {
+.post-content h2 {
     font-family: @headerFontFamily;
     margin-top: 2em;
-    font-size: 2.5em;
+    font-size: 2em;
     font-weight: 400;
     color: @headerFontColor;
 }
