--- a/default.hbs
+++ b/default.hbs
@@ -32,8 +32,12 @@
 
     <footer class="site-footer">
         <div class="inner">
-             <section class="copyright">&copy; 2013 <a href="/">{{@blog.title}}</a>. All rights reserved.</section>
-             <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org"><span class="hidden">Ghost</span></a></section>
+            <section class="copyright">&copy; 2013 <a href="/">{{@blog.title}}</a>. All rights reserved.</section>
+            <section class="social">
+              <a href="https://twitter.com/elena_kolevska" class="icon-twitter" target="_blank"></a>
+              <a href="https://plus.google.com/+ElenaKolevska?rel=author" class="icon-google-plus" target="_blank"></a>
+            </section>
+            <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org"><span class="hidden">Ghost</span></a></section>
         </div>
     </footer>
 
