--- a/post.hbs
+++ b/post.hbs
@@ -58,7 +58,7 @@
 
         {{/post}}
     
-    <!-- Disqus comments
+    <!-- Disqus comments-->
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
@@ -75,7 +75,7 @@
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a> 
-    -->
+    <!-- End Disqus comments-->
 
     </article>
 
